@@ -536,3 +536,6 @@
 	orr	x0, x0, #0xff lsl #1
 
 	mov	x0, ##5
+
+	msr	daifset, x0
+	msr	daifclr, x0
