@@ -158,3 +158,7 @@
 
 	rw_sys_reg sys_reg=dbgdtr_el0 xreg=x15 r=1 w=1
 	rw_sys_reg sys_reg=dbgdtrrx_el0 xreg=x15 r=1 w=0
+
+	rw_sys_reg sys_reg=rmr_el1 xreg=x15 r=1 w=1
+	rw_sys_reg sys_reg=rmr_el2 xreg=x15 r=1 w=1
+	rw_sys_reg sys_reg=rmr_el3 xreg=x15 r=1 w=1
